--- a/style.css
+++ b/style.css
@@ -305,6 +305,60 @@ input[type="number"]::-webkit-inner-spin-button {
   justify-content: center;
 }
 
+.slider_{
+  height: 3px;
+  width: 230px;
+  position: relative;
+  background: #ddd;
+  border-radius: 5px;
+  margin-top: 43px;
+  justify-content: center;
+}
+
+.slider_ .progress{
+  height: 3px;
+  left: 25%;
+  right: 25%;
+  position: absolute;
+  border-radius: 5px;
+  background: black;
+  color: black;
+}
+
+.range-input{
+  position: relative;
+}
+.range-input input{
+  position: relative;
+  margin-right: 0px;
+  margin-left: 0px;
+  background: none;
+  pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+input[type="range"]::-webkit-slider-thumb{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  position: relative;
+  background: black;
+  pointer-events: auto;
+  -webkit-appearance: none;
+  box-shadow: 0 0 6px rgba(0,0,0,0.05);
+
+}
+
+input[type="range"]::-moz-range-thumb{
+  height: 10px;
+  width: 10px;
+  border: none;
+  border-radius: 50%;
+  background: #17A2B8;
+  pointer-events: auto;
+  -moz-appearance: none;
+  box-shadow: 0 0 6px rgba(0,0,0,0.05);
+}
 
 .text-input{
     margin-right: 11px;
