--- a/style.css
+++ b/style.css
@@ -264,34 +264,33 @@ h2{
 
 }
 .wrapper{
-  width: 300px;
-  border-radius: 10px;
-  padding: 10px 10px 10px;
+  width: 230px;
+
+text-align: left;
+
 }
 
 .price-input{
   width: 100%;
   display: flex;
-  margin: 10px 10 10px;
+  margin: 0px 0 0px;
 }
 .price-input .field{
   display: flex;
-  width: 100%;
   height: 20px;
+  width: 100%;
   align-items: center;
 
 }
 .field input{
-  width: 100%;
-  height: 100%;
-  outline: none;
-  font-size: 19px;
-  margin-left: 12px;
+  width: 47px;
+  height: 20px;
+  font-size: 14px;
+  margin-left: 7px;
   border-radius: 5px;
   text-align: center;
   border: 1px solid #999;
-  -moz-appearance: textfield;
-  margin-right: 1px;
+  -moz-appearance: none;
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -299,6 +298,8 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 .price-input .separator{
   width: 10px;
+  margin-left: 8px;
+  margin-right: 8px;
   display: flex;
   font-size: 14px;
   align-items: center;
@@ -307,12 +308,10 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .slider_{
   height: 3px;
-  width: 230px;
   position: relative;
   background: #ddd;
   border-radius: 5px;
   margin-top: 43px;
-  justify-content: center;
 }
 
 .slider_ .progress{
@@ -322,16 +321,16 @@ input[type="number"]::-webkit-inner-spin-button {
   position: absolute;
   border-radius: 5px;
   background: black;
-  color: black;
 }
 
 .range-input{
   position: relative;
 }
 .range-input input{
-  position: relative;
-  margin-right: 0px;
-  margin-left: 0px;
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  top: -5px;
   background: none;
   pointer-events: none;
   -webkit-appearance: none;
