--- a/StyleUser.css
+++ b/StyleUser.css
@@ -15,10 +15,7 @@
 .container{
   display: flex;
 }
-.second{
-color: white;
-flex: 1;
-}
+
 .title { 
   text-decoration: none;
   color: white;
@@ -28,10 +25,21 @@ flex: 1;
   position: absolute;
   background: #232323;
   width: 50%;
-  margin: -8px -10px 0 -8px; 
+  left: 0px;
+  top: 0px;   
   height: 100%;
   flex: 1;
 }
+ .second{
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  background: white;
+  flex: 1;
+  right: 0px;
+  top: 0px;
+
+ }
 
 .photo{
   position: relative;
@@ -117,7 +125,7 @@ input[type="text"]{
   font-family: 'Montserrat';
   justify-content: flex-end;
   display: flex;
-    font-size: 16px;
+  font-size: 16px;
 
 
 }
@@ -133,32 +141,119 @@ input[type="text"]{
 
 }
 h3{
-  color: black;
-
-  align-content: center;
-
+    color:  #000;
+    background: #FFF;
+    font-family: 'Marck Script';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 50px;
+    letter-spacing: 0.05em;
+    align-content: center;
+    text-align: center;
 
 }
  .line{
-    width: 100%;
+    width: 50%;
     border: 1px solid #000000;
-    transform: rotate(-0.31deg);
-    margin-top: 1px;
+    margin: auto;
+
+
  }
  .wishlist{
-  position: absolute;
-  width: 14%;
-  margin-left: 70%;
-  margin-top:15%;
+  margin-right: 20%;
+  margin-left: 20%;
+  height: 70%;
+  margin-top:20%;
   font-family: 'Marck Script';
-  justify-content: center;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
   line-height: 45px;
   letter-spacing: 0.05em;
-
   color: #000000;
 
 
  }
+ .travel-card-personal{
+  margin-top: 10%;
+  width: 100%;
+  height: 220px;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 20px 20px 20px 20px;
+}
+.travel-image-personal {
+  position: relative;
+  width: 30%;
+  height: 220px;
+  overflow: hidden;
+  border-radius: 20px 0px 0px 20px;
+}
+.travel-info-personal {
+  position: fixed;
+  width: 50%;
+  height: 100px;
+  text-align: left;
+  display: flex;
+  
+}
+.descriptionPersonal {
+width: 50%;
+height: 100%;
+font-family: 'Montserrat';
+color: #000000;
+font-weight: 400;
+font-size: 14px;
+line-height: 21px;
+letter-spacing: 0.05em;
+}
+.price-personal{
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    letter-spacing: 0.05em;
+    color: #000000;
+    margin-left: 40%;
+    align-items: center;
+    text-align: center;
+    margin-top: auto;
+}
+.moreInfoPersonal{
+    box-sizing: border-box;
+    width: 142px;
+    height: 33px;   
+    border-radius: 100px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.05em;
+    margin-top: 10px;
+    background: white;
+}
+
+
+.PriceAndButtonPersonal{
+    position: relative;
+    display: block;
+    align-items: center;
+
+}
+.name {
+    color: black;
+    font-family: 'Montserrat';
+    font-style: normal;
+    width: 50%;
+    height: 24px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    white-space: nowrap;
+    margin-left: 20px;
+}
+.price-and-name{
+  display: flex;
+}
